--- a/views/index.liquid
+++ b/views/index.liquid
@@ -7,49 +7,61 @@
     <h2>Inspireer & Deel je Groene Passie!</h2>
   </header>
 
-  <!-- Stekjes Bieb (beige achtergrond) -->
-  <section class="bieb-blok stekjes-bieb">
-    <div class="bieb-blok__container">
-      <div class="bieb-blok__text">
-        <h2>Onze Stekjes Bieb!</h2>
-        <p>Bij Buurtcampus Oost kun je de stekjeskast bezoeken om stekjes te ruilen, je kunt ook op onze website inzien welke stekjes beschikbaar zijn. Dit is een geweldige manier voor plantenliefhebbers om met elkaar in contact te komen en planten te delen. 
-        Het maakt het gemakkelijk om je favoriete stekjes te vinden en te ruilen met anderen in de buurt, zonder gedoe. Kom langs bij Buurtcampus Oost en ontmoet mede-plantenliefhebbers!</p>
-      </div>
-      <figure class="bieb-blok__image">
-        <img class="image-border-orange" src="/assets/home-background.png" alt="Afbeelding van de Stekjes Bieb">
-      </figure>
+<!-- Stekjes Bieb -->
+<section class="bieb-blok stekjes-bieb">
+  <div class="bieb-blok__container">
+    <div class="bieb-blok__text">
+      <h2>Onze Stekjes Bieb!</h2>
+      <p>Bij Buurtcampus Oost kun je de stekjeskast bezoeken om stekjes te ruilen, je kunt ook op onze website inzien welke stekjes beschikbaar zijn. Dit is een geweldige manier voor plantenliefhebbers om met elkaar in contact te komen en planten te delen. 
+      Het maakt het gemakkelijk om je favoriete stekjes te vinden en te ruilen met anderen in de buurt, zonder gedoe. Kom langs bij Buurtcampus Oost en ontmoet mede-plantenliefhebbers!</p>
     </div>
-  </section>
+    <figure class="bieb-blok__image">
+      <picture>
+        <source srcset="/assets/home-background.avif" type="image/avif">
+        <source srcset="/assets/home-background.webp" type="image/webp">
+        <img class="image-border-orange" src="/assets/home-background.avif" alt="Afbeelding van de Stekjes Bieb" loading="lazy">
+      </picture>
+    </figure>
+  </div>
+</section>
 
-  <!-- Zaden Bieb (bruine achtergrond) -->
-  <section class="bieb-blok zaden-bieb">
-    <div class="bieb-blok__container reverse">
-      <div class="bieb-blok__text">
-       
-        <h2>Onze Zaden Bieb</h2>
-        <p>Bij Buurtcampus Oost kun je de zadenkast bezoeken om zaadjes te kunnen ruilen, je kunt ook op onze website inzien welke stekjes beschikbaar zijn. Dit is een geweldige manier voor plantenliefhebbers om met elkaar in contact te komen en planten te delen. 
-        Het maakt het gemakkelijk om je favoriete stekjes te vinden en te ruilen met anderen in de buurt, zonder gedoe. Kom langs bij Buurtcampus Oost en ontmoet mede-plantenliefhebbers!</p>
-      </div>
-      <figure class="bieb-blok__image">
-        <img class="image-border-green"  src="/assets/home-background.png" alt="Afbeelding van de Zaden Bieb">
-      </figure>
+<!-- Zaden Bieb -->
+<section class="bieb-blok zaden-bieb">
+  <div class="bieb-blok__container reverse">
+    <div class="bieb-blok__text">
+      <h2>Onze Zaden Bieb</h2>
+      <p>Bij Buurtcampus Oost kun je de zadenkast bezoeken om zaadjes te kunnen ruilen, je kunt ook op onze website inzien welke stekjes beschikbaar zijn. Dit is een geweldige manier voor plantenliefhebbers om met elkaar in contact te komen en planten te delen. 
+      Het maakt het gemakkelijk om je favoriete stekjes te vinden en te ruilen met anderen in de buurt, zonder gedoe. Kom langs bij Buurtcampus Oost en ontmoet mede-plantenliefhebbers!</p>
     </div>
-  </section>
+    <figure class="bieb-blok__image">
+      <picture>
+        <source srcset="/assets/home-background.avif" type="image/avif">
+        <source srcset="/assets/home-background.webp" type="image/webp">
+        <img class="image-border-green" src="/assets/home-background.avif" alt="Afbeelding van de Zaden Bieb" loading="lazy">
+      </picture>
+    </figure>
+  </div>
+</section>
 
-  <!-- Geveltuin (beige achtergrond) -->
-  <section class="bieb-blok geveltuin">
-    <div class="bieb-blok__container">
-      <div class="bieb-blok__text">
-        <h2>Onze Gevel Tuinen</h2>
-        <p>Bij Buurtcampus Oost kan je deelnemen aan de geveltuin projecten. Het geveltuinproject is een geweldige manier om je steentje bij te dragen aan een mooier, groener en socialer Amsterdam. Of je nu een ervaren tuinier bent of nog nooit met een plant hebt gewerkt, er is altijd een plek voor je in ons team. 
-        We leren je alles wat je moet weten en zorgen voor de benodigde materialen.
-        Meld je aan vandaag nog!</p>
-      </div>
-      <figure class="bieb-blok__image">
-        <img class="image-border-orange" src="/assets/home-background.png" alt="Afbeelding van een Geveltuin">
-      </figure>
+<!-- Geveltuin -->
+<section class="bieb-blok geveltuin">
+  <div class="bieb-blok__container">
+    <div class="bieb-blok__text">
+      <h2>Onze Gevel Tuinen</h2>
+      <p>Bij Buurtcampus Oost kan je deelnemen aan de geveltuin projecten. Het geveltuinproject is een geweldige manier om je steentje bij te dragen aan een mooier, groener en socialer Amsterdam. Of je nu een ervaren tuinier bent of nog nooit met een plant hebt gewerkt, er is altijd een plek voor je in ons team. 
+      We leren je alles wat je moet weten en zorgen voor de benodigde materialen.
+      Meld je aan vandaag nog!</p>
     </div>
-  </section>
+    <figure class="bieb-blok__image">
+      <picture>
+        <source srcset="/assets/home-background.avif" type="image/avif">
+        <source srcset="/assets/home-background.webp" type="image/webp">
+        <img class="image-border-orange" src="/assets/home-background.avif" alt="Afbeelding van een Geveltuin" loading="lazy">
+      </picture>
+    </figure>
+  </div>
+</section>
+
 
   <!-- Buurtcampus Oost -->
   <section class="buurtcampus">
