--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -7,6 +7,6 @@
     <title>Bieb in Bloei</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/Styleguide.css">
-    <script src="script.js"></script>
+    <script src="script/script.js" defer></script>
 </head>
 
