--- a/views/agenda.liquid
+++ b/views/agenda.liquid
@@ -1,5 +1,4 @@
 {% render 'partials/head.liquid', title: 'Agenda' %}
-
-
+{% render 'partials/nav.liquid', title: 'Agenda' %}
 
 {% render 'partials/foot.liquid' %}
