--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -413,7 +413,7 @@ main {
 .header-project p {
   margin: 1rem auto 0;
   max-width: 90%;
-  font-size: 1em;
+  font-size: 0.9em;
   color: var(--main-color-beige);
 }
 
@@ -431,6 +431,13 @@ main {
   list-style: none;
   margin: 0 auto;
 }
+.project-cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
 
 .project-cards li {
   padding: 1rem;
@@ -438,6 +445,7 @@ main {
   border-radius: 10px;
   margin: 0 auto;
   font-family: poppins;
+  justify-items: center;
   background-color: var(--main-color-brown);
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -605,8 +613,24 @@ input::placeholder {
   
 
 /* ========== RESPONSIVE ========== */
+@media (min-width: 700px) {
+ 
+  .header-project h1 {
+    font-size: 3em;
+    margin-top: 50px;
+  }
+  
+  .header-project p {
+    font-size: 1.2em;
+    margin-top: 50px;
+    max-width: 800px;
+  }
+}
+.header-project {
+}
 
-@media (min-width: 769px) {
+
+@media (min-width: 1000px) {
  
   /*PRIKBORD DESKTOP*/
   .header-project {
