--- a/views/404.liquid
+++ b/views/404.liquid
@@ -1,7 +1,17 @@
 {% render 'partials/head.liquid' %}
 {% render 'partials/nav.liquid' %}
 
-
- 
+<body class="body-404">
+    <header class="header-404">
+      <h1>404 PAGE NOT FOUND</h1>
+  </header>
+  <main class="main-404">
+      <section class="section-404">
+          <h2> oeppss er iets misgegaan !</h2>
+          <img src="/assets/Ass-Harry.avif" alt="404">
+          <h2><a href="/">Terug naar de homepage</a></h2>
+      </section>
+  </main>
+  </body>
 
 {% render 'partials/foot.liquid' %}
