#57 #2 #30 Font-weight veranderd
Nu is het meer consistent met de pagina!

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -162,6 +162,7 @@ h1, h2 {
     overflow: hidden;
     gap: 1.5rem;
     transition: max-height 0.3s ease-in-out;
+    font-weight: var(--font-weight-bold);
   }
 
   .nav-links li {
