--- a/views/partials/nav.liquid
+++ b/views/partials/nav.liquid
@@ -23,10 +23,8 @@
                 <details>
                     <summary>Projecten</summary>
                     <ul>
-                            <li><a href="/">Stekjes</a></li>
-                            <li><a href="/zaden/">Zaden</a></li>
+                            <li><a href="/stekjes/">Stekjes</a></li>
                             <li><a href="/geveltuin/">Geveltuin</a></li>
-                            <li><a href="/groenebieb/">Groenebieb</a></li>
                     </ul>
                 </details>
             </li>
