--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,43 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300..700&family=Orbitron&family=Parkinsans:wght@300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=Varela+Round&display=swap');
 
-/* ========== STANDAARD NAV STYLING ========== */
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-  }
-  
-  nav {
-      color: white;
-  }
-  
-  .navbar {
-      background-color: var(--main-color-green);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 1rem 2rem;
-      flex-wrap: wrap;
-  }
-  
-  .logo-container {
-      display: flex;
-      align-items: center;
-  }
-  
-  .logo {
-      width: 50px;
-      height: auto;
-      margin-left: 10px;
-  }
-  
-  h1 {
-      font-size: 1.5rem;
-      color: var(--text-light);
-      font-family: var(--font-primary);
-  }
-
 /* =================== BASE STYLES =================== */
 * {
   font-family: 'Poppins', sans-serif;
@@ -64,6 +26,44 @@ main {
 h1, h2 {
   font-size: 4rem;
   font-weight: var(--font-weight-black);
+}
+
+/* ========== STANDAARD NAV STYLING ========== */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+  
+nav {
+  color: var(--text-color-white);
+}
+  
+.navbar {
+  background-color: var(--main-color-green);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  flex-wrap: wrap;
+}
+  
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+  
+.logo {
+  width: 50px;
+  height: auto;
+  margin-left: 10px;
+}
+  
+h1 {
+  font-size: 1.5rem;
+  color: var(--text-light);
+  font-family: var(--font-primary);
 }
 
 /* =================== NAVIGATION =================== */
@@ -93,6 +93,7 @@ h1, h2 {
   padding: 0;
   margin: 0;
   font-weight: var(--font-weight-bold);
+  list-style: none;
 }
 
 .nav-links li {
