--- a/views/detail.liquid
+++ b/views/detail.liquid
@@ -2,7 +2,7 @@
 
 <main class="main-stekje">
 <section class="stekje-info">
-  <a href="/stekjes" class="terugknop">terug</a>
+  <a href="/stekjes" class="terug-stekjes">terug</a>
   <section class="stekje-description">
     <h2>{{ stekje.naam }}</h2>
     <p>{{ stekje.beschrijving }}</p>
