--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -254,8 +254,8 @@ nav {
 }
 
 .stekje-description img {
-  width: 70%;
-  max-width: 70%;
+  width: 40%;
+  max-width: 40%;
   border-radius: 15px;
   margin-top: 1.5rem;
   box-shadow: 40px 8px 15px #F4CA8B;
@@ -320,12 +320,10 @@ nav {
 }
 
 .stekje-details[open] .stekje-summary::after {
-  content: " -";
+  content: "-";
 }
 
-/* DETAILPAGINA DESKTOP*/
-
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .stekje-info {
     flex-direction: row;
     padding: 60px;
@@ -351,10 +349,10 @@ nav {
     border-radius: 30px;
     box-shadow: 150px 20px 30px #F4CA8B;
     margin-left: 0;
-
   }
 
   .stekje-kenmerken {
+    min-width: 300px;
     width: 1500px;
   }
 
@@ -370,11 +368,7 @@ nav {
 /* =================== BIEB BLOK =================== */
 .bieb-blok {
   padding: clamp(1.5rem, 2vw, 3rem) 1rem;
-
-
 }
-
-
 
 .bieb-blok__container {
   display: flex;
