--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -204,11 +204,7 @@ nav {
 /* =================== BIEB BLOK =================== */
 .bieb-blok {
   padding: clamp(1.5rem, 2vw, 3rem) 1rem;
-
-
 }
-
-
 
 .bieb-blok__container {
   display: flex;
@@ -225,8 +221,6 @@ nav {
   padding: 0 1rem;
 }
 
-
-
 .bieb-blok__image {
   width: 100%;
   max-width: 600px;
@@ -238,8 +232,6 @@ nav {
   border-radius: 12px;
   border: 4px solid transparent;
 }
-
-
 
 /* Blok specifieke kleuren */
 .stekjes-bieb {
@@ -286,8 +278,6 @@ nav {
   }
 }
 
-
-
 /* =================== BUURTCAMPUS =================== */
 .buurtcampus {
   background-color: var(--main-color-brown);
@@ -329,11 +319,7 @@ nav {
   margin: 0 auto 1rem auto;
 }
 
-
-
 /* =================== Contact =================== */
-
-
 .aanmeld-container {
   display: flex;
   flex-direction: column;
@@ -490,14 +476,21 @@ section.introtext-agenda {
   align-items: center;
   justify-content: center;
   text-align: center;
-  min-height: 30vh;
+  min-height: 50vh;
   font-weight: var(--font-weight-bold);
   padding: 2rem;
-  background-color: var(--bg-light); 
+  background: var(--main-color-beige);
+  color: var(--main-color-green);
 }
 
-p.introtext-agenda {
-  background: green;
+.introworkshops-agenda p{
+  margin-left: 4em;
+  margin-right: 4em;
+  margin-top: 0.5em;
+}
+
+h2.h2-agenda {
+  margin-top: 1em;
 }
 
 .workshops-agenda ul {
@@ -519,6 +512,7 @@ p.introtext-agenda {
   flex-direction: column;
   gap: 1rem;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  margin-top: 1em;
 }
 
 .workshops-agenda li:hover {
@@ -552,7 +546,7 @@ p.introtext-agenda {
   margin: 0 auto;
 }
 
-  
+
   
 /* =================== FOOTER =================== */
 .footer {
