--- a/views/stekjes.liquid
+++ b/views/stekjes.liquid
@@ -62,10 +62,10 @@
         <h2>Hoe werkt het ? </h2>
       </section>
       <p> Het ruilen van stekjes is heel eenvoudig:
-        <span>1) Breng een stekje mee van thuis, in water of aarde.</span>
-        <span>2) Plaats het in de stekjeskast en kies een nieuw stekje uit.</span>
-        <span>3) Gebruik eventueel de potjes met aarde onder de kast om je stekje direct in te planten.</span>
-        <span>4) Neem je nieuwe stekje mee naar huis en laat het verder groeien.</span>
+        <p>1) Breng een stekje mee van thuis, in water of aarde.</p>
+        <p>2) Plaats het in de stekjeskast en kies een nieuw stekje uit.</p>
+        <p>3) Gebruik eventueel de potjes met aarde onder de kast om je stekje direct in te planten.</p>
+        <p>4) Neem je nieuwe stekje mee naar huis en laat het verder groeien.</p>
         Zo zorgen we samen voor meer groen in de buurt!
       </p>
     </article>
