--- a/views/detail.liquid
+++ b/views/detail.liquid
@@ -6,7 +6,7 @@
   <section class="stekje-description">
     <h2>{{ stekje.naam }}</h2>
     <p>{{ stekje.beschrijving }}</p>
-    <img src="https://fdnd-agency.directus.app/assets/{{ stekje.foto }}" alt="{{ stekje.naam }}" loading="lazy">
+    <img src="https://fdnd-agency.directus.app/assets/{{ stekje.foto }}" alt="{{ stekje.naam }}">
   </section>
   <section class="stekje-kenmerken">
 
