--- a/views/partials/nav.liquid
+++ b/views/partials/nav.liquid
@@ -25,15 +25,12 @@
                     <ul>
                             <li><a href="/stekjes/">Stekjes</a></li>
                             <li><a href="/geveltuin/">Geveltuin</a></li>
+                            <li><a href="/project/">Prikbord Stekjes</a></li>
                     </ul>
                 </details>
             </li>
 
             <li><a href="/agenda/">Agenda</a></li>
-            <li><a href="https://biebinbloei.nl/partners">Partners</a></li>
-            <li><a href="https://biebinbloei.nl/over">Over</a></li>
-            <li><a href="https://biebinbloei.nl/agenda">Agenda</a></li>
-
-            <li><a href="https://biebinbloei.nl/contact">Contact</a></li>
+            <li><a href="/contact/">Contact</a></li>
         </ul>
     </nav>
