--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -571,6 +571,16 @@ main {
   }
 }
 
+@media (min-width: 1200px) {
+  .carousel-item {
+      width: 300px;
+      height: 400px;
+  }
+
+  .stekjeskast p  {
+    font-size: 18px;
+  }
+}
 
 /* =================== DETAILPAGINA =================== */
 .main-stekje { 
