--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -211,13 +211,34 @@ h1 {
 }}
 
 /* Footer & header */
+.page-header {
+  position: relative;
+  height: 70vh;
+  overflow: hidden;
+}
+
 .imageheader-home {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.imageheader-home h1 {
+  position: relative;
+  z-index: 1000;
+  color: white;
+  height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 90vh;
+  text-align: center;
+  padding: 2rem;
 }
+
 
 .page-header h1,
 .page-header h2 {
