#7 #65 Gemergde code beetje verbeterd
- Stukje tekst staat weer voor de header image
- Stukken in code verbeterd met o.a. ruimtes en algemene naamgeving: main --> stekjes-main

--- a/views/stekjes.liquid
+++ b/views/stekjes.liquid
@@ -18,7 +18,7 @@
   </p>
 </article>
 
-<main>
+<main class="main-stekjes">
   <section class="stekjeskast">
     <h2>Stekjes <span>kast</span></h2>
     <p>“Onze Stekjeskast is met liefde gemaakt door kinderen. Hieronder vind
