--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -125,6 +125,7 @@ h1 {
 .nav-links details ul {
   padding-left: 1.5rem; 
   list-style: none;
+  z-index: 1000;
 }
 
 .nav-links details ul li a {
@@ -265,7 +266,7 @@ h1 {
   }
 }
 
-main { 
+.main-stekjes { 
   overflow: hidden;
   background-color: var(--main-color-brown);
 }
@@ -452,8 +453,6 @@ margin-top: 300px;
   overflow-y: visible;
   padding: 1rem;
 }
-
-
  
 .stekje img {
   width: 100%;
@@ -525,10 +524,7 @@ margin-top: 300px;
   .stekje-kenmerken {
     min-width: 300px;
     width: 1500px;
-
-
   }
-
 
   .uitleg-stekjes {
     font-size: 16px;
@@ -1317,7 +1313,6 @@ input::placeholder {
     font-size: 1.5rem;
   }
 }
-
 
 /* Geveltuin */
 
