--- a/views/geveltuin.liquid
+++ b/views/geveltuin.liquid
@@ -15,17 +15,22 @@
                 <p>{{ tekstje.text }}</p>
             {% endfor %}
         </div>
-
-        <h1>Waarom <span class="highlight">meedoen?</span></h1>
-
-        <p>Ben jij klaar om je straat op te fleuren, een bijdrage te leveren aan de biodiversiteit en het klimaat, én je buren te inspireren? Doe dan mee met ons project om geveltuinen aan te leggen in Amsterdam!</p>
-        <p>Verfraai je straat: Geef je straat kleur en maak er een gezelligere plek van.</p>
-        <p>Goed voor het milieu: Planten in geveltuinen nemen CO2 op en zorgen voor een schonere lucht. Ze filteren ook fijnstof en regenwater.</p>
-        <p>Koeler in de zomer: Planten in geveltuinen zorgen voor schaduw en verdampen water, wat voor een verkoelend effect zorgt in de stad.</p>
-        <p>Goed voor de biodiversiteit: Geveltuinen bieden nectar en stuifmeel voor insecten zoals bijen en vlinders.</p>
-        <p>Gezellig: Geveltuinen zorgen voor een meer sociale en betrokken buurt.</p>
-    </section>
-    
+        <article class="gevetuin-article">
+            <h2> Waarom <span>meedoen?</span> </h2>
+            <p>Ben jij klaar om je straat op te fleuren, een bijdrage te leveren aan 
+                de biodiversiteit en het klimaat, én je buren te inspireren? </p>
+            <p>Doe dan mee met ons project om geveltuinen aan te leggen in Amsterdam!</p>
+            <p>Verfraai je straat: Geef je straat kleur en maak er een gezelligere plek van.
+            Goed voor het milieu: Planten in geveltuinen nemen CO2 op en zorgen voor een schonere lucht. Ze filteren ook fijnstof en regenwater. 
+            Koeler in de zomer: Planten in geveltuinen zorgen voor schaduw en verdampen water, wat voor een verkoelend effect zorgt in de stad. 
+            Goed voor de biodiversiteit: Geveltuinen bieden nectar en stuifmeel voor insecten zoals bijen en vlinders. 
+            Gezellig: Geveltuinen zorgen voor een meer sociale en betrokken buurt.</p>
+            </article>
+            
+            <a  href="/contact" class="harry-button">Meld je aan
+            <img src="/assets/harrybutton.png" alt="" class="harry-jump">
+            </a>
+            
     <section class="container-geveltuincarousel">
         <h1>Maak Amsterdam <span class="highlight2">Groener</span></h1>
         <p>Verfraait de straat: Geveltuinen zorgen voor kleur en leven in de brouwerij.</p>
