--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1549,6 +1549,37 @@ span {
     cursor: pointer;
     display: block;
     margin: 20px auto; 
+    margin-top: 100px;
+}
+
+.harry-jump {
+    position: absolute;
+    height: 75px;
+    width: 70px;
+    transform: translate(300%, -85%);
+    z-index: -1;
+    transition: transform 1s ease;
+}
+@keyframes harryJumpAnimation {
+    0% {
+        transform: translate(300%, -85%) rotate(0deg);
+    }
+    25% {
+        transform: translate(300%, -200%) rotate(0deg);
+    }
+    75% {
+        transform: translate(300%, -200%) rotate(360deg);
+    }
+    100% {
+        transform: translate(300%, -85%) rotate(360deg);
+    }
+}
+
+.harry-button:hover .harry-jump {
+    animation: harryJumpAnimation 1s ease-in-out;
+}
+.harry-button:hover {
+    background-color: var(--main-color-green);
 }
 
 .highlight2 {
