--- a/views/contact.liquid
+++ b/views/contact.liquid
@@ -2,7 +2,7 @@
 {% render 'partials/nav.liquid' %}
 
 <main>
-  <header class="page-header">
+<header class="page-header stekjes-hero">
     <h1>Contact</h1>
   </header>
 
