--- a/views/index.liquid
+++ b/views/index.liquid
@@ -2,11 +2,13 @@
 {% render 'partials/nav.liquid' %}
 
 <main>
-  <header class="page-header">
+  <header class="page-header stekjes-hero">
     <h1>Samen Groener Leven</h1>
     <h2>Inspireer & Deel je Groene Passie!</h2>
   </header>
 
+
+  
 <!-- Stekjes Bieb -->
 <section class="bieb-blok stekjes-bieb">
   <div class="bieb-blok__container">
