--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1594,6 +1594,10 @@ img.fade-in-geveltuinafbeelding.show {
 } */
 
 /* Agenda */
+img.header-agenda {
+  object-fit: cover;
+}
+
 section.introtext-agenda {
   display: flex;
   align-items: center;
